--- a/style.css
+++ b/style.css
@@ -2,4 +2,15 @@
 body {
     background-color: #3366ff;
 }
+   <center>
+       <a target="_blank" href="http://www.mixadesivos.com.br/simulador/d77f00766fd3be3f2189c843a6af3fb2/58946887b07bc.png">
+      <img src="http://www.mixadesivos.com.br/simulador/d77f00766fd3be3f2189c843a6af3fb2/58946887b07bc.png" alt="Cinque Terre" width="350" height="350">
+    </a>
+     </center>
+
+h1 {
+
+    }
+
+
 
