--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #3366ff;
+    background-color: #4d79ff;
 }
    <center>
        <a target="_blank" href="http://www.mixadesivos.com.br/simulador/d77f00766fd3be3f2189c843a6af3fb2/58946887b07bc.png">
